fix spacing around paragraphs and buttons (#140)

--- a/themes/ansible-community/sass/_homepage-get-started.scss
+++ b/themes/ansible-community/sass/_homepage-get-started.scss
@@ -3,7 +3,6 @@
   align-items: center;
   font-family: $redhat-display;
   text-align: center;
-  margin: 5px;
   padding-right: 1rem;
   .btn {
     font-size: 0.9rem;
